--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="CSS/mystyle.css" rel="stylesheet">
     <title>Japanese workwear</title>
 </head>
 <body>
-    
+    <h1>Welcome to my page!</h1>
+    <p>Trying to see if the update works in a new browser tab</p>
+    <header>
+
+    </header>
+    <section>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
